# CIGNN

./: .gitignore  .gitmessage.txt  LICENSE  README.md  error.md  pyproject.toml  setup.yaml
.github/ISSUE_TEMPLATE/: Bug.yml
.github/workflows/: node.js.yml
cignn/model/: invariant_CNMD.py
cignn/model/layers/: basic_layers.py  basis_layers.py  conv_layer.py  embedding_layer.py  extension_layer.py  (+4 more)
cignn/train/: trainer.py
cignn/utils/: base_util.py  etc.py
cignn_torch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cnmp/: CMakeLists.txt  README.md  build.sh  patch_lammps.sh
cnmp/CNMP/: calc_polar.py  generator.py  prediction.py
cnmp/ML-CNMP/: compute_chi.cpp  compute_chi.h  compute_field.cpp  compute_field.h  pair_CNMP.cpp  pair_CNMP.h  pair_CNMP_gpu.cpp  pair_cnmp.cpp  pair_cnmp_gpu.h
cnmp/example/: cubic_0.00.lammpstrj  cubic_log_0.00.lammps  cubic_relax_0.00.data  cubic_relax_0.00.lammps  example.in  log.CNMP  log.MPHP  log.lammps  log_file.txt  run.lammps  run.sh  sbatch.sh  srun.sh  xyz.lammpstrj
dataset/: README.md
dataset/Figure_2/: README.md  figure2.py
example-1/: charge_results.csv  energy_results.csv  force_results.csv  model.ipynb  normalizers.pkl  pred.npy  scale_datas.pkl  split_test.npy  split_train.npy  split_valid.npy  test_loader.pkl  test_q_loader.pkl  train_loader.pkl  train_q_loader.pkl
modelset/: config_ef.yaml  config_q.yaml  q.pth.tar
script/: run_pq.py  run_predict.py  run_predict.yaml  run_train.py  run_train.yaml  run_train_q.py  run_train_q.yaml
script/example_model/: q_grad.pth.tar
(+9 files in other folders)
